; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/win32/extr_wasapi-output.c_audio_monitor_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/win32/extr_wasapi-output.c_audio_monitor_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }
%struct.audio_monitor = type { i32 }

@obs = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.audio_monitor* @audio_monitor_create(i32* %0) #0 {
  %2 = alloca %struct.audio_monitor*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.audio_monitor, align 4
  %5 = alloca %struct.audio_monitor*, align 8
  store i32* %0, i32** %3, align 8
  %6 = bitcast %struct.audio_monitor* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %6, i8 0, i64 4, i1 false)
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @audio_monitor_init(%struct.audio_monitor* %4, i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %29

11:                                               ; preds = %1
  %12 = call %struct.audio_monitor* @bmemdup(%struct.audio_monitor* %4, i32 4)
  store %struct.audio_monitor* %12, %struct.audio_monitor** %5, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = call i32 @pthread_mutex_lock(i32* %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @da_push_back(i32 %20, %struct.audio_monitor** %5)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = call i32 @pthread_mutex_unlock(i32* %24)
  %26 = load %struct.audio_monitor*, %struct.audio_monitor** %5, align 8
  %27 = call i32 @audio_monitor_init_final(%struct.audio_monitor* %26)
  %28 = load %struct.audio_monitor*, %struct.audio_monitor** %5, align 8
  store %struct.audio_monitor* %28, %struct.audio_monitor** %2, align 8
  br label %31

29:                                               ; preds = %10
  %30 = call i32 @audio_monitor_free(%struct.audio_monitor* %4)
  store %struct.audio_monitor* null, %struct.audio_monitor** %2, align 8
  br label %31

31:                                               ; preds = %29, %11
  %32 = load %struct.audio_monitor*, %struct.audio_monitor** %2, align 8
  ret %struct.audio_monitor* %32
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @audio_monitor_init(%struct.audio_monitor*, i32*) #2

declare dso_local %struct.audio_monitor* @bmemdup(%struct.audio_monitor*, i32) #2

declare dso_local i32 @pthread_mutex_lock(i32*) #2

declare dso_local i32 @da_push_back(i32, %struct.audio_monitor**) #2

declare dso_local i32 @pthread_mutex_unlock(i32*) #2

declare dso_local i32 @audio_monitor_init_final(%struct.audio_monitor*) #2

declare dso_local i32 @audio_monitor_free(%struct.audio_monitor*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
